# configer

./: .gitignore  .readthedocs.yaml  LENECE.md  Makefile  README.md  pyproject.toml
configer/: Makefile  README.md  __init__.py  configer.py  helper.py  hidiger.py  main.py  re_helpful.py  useconf.py
configer/docs/: requirements.txt
configer/docs/source/: api.rst  conf.py  index.rst
configer/front/: __init__.py  cli_helpful.py  front_cli.py
configer/logic/: __init__.py  helpful.py  hideconf.py  parseconf.py  tcode.py  ttext.py
configer/test/: head_test.py  helpful_test.py  inout_helpful.py  test_cli.py  test_doc.py  test_hideconf.py  test_main.py  test_parseconf.py  test_tcode.py  test_ttext.py
configer/test/data_set/: __env.env  conf.py  conf_2.py  conf_pub.py
configer/test/in/: f_parse_1.py  t_complite_code.py  t_hideconf.py  t_parse_4.py  t_tcode_1.py  ОписаниеТестовыхДанных.md
configer/test/in/public/hideconf/: conf.py  conf_pub.py
configer/test/in/public/parseconf/: conf.py  ext.py  rewrite_conf.py
configer/test/in/public/tcode/: print_conf.py  upfile_conf.py
configer/test/in/public/ttext/: conf.py
docs/source/: api.rst  conf.py  ttext.rst
