[tool.poetry]
name = "configer"
version = "0.1.0"
description = "Создание файлов конфигураци"
authors = ["Denis kustov <denis-kustov@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
Nuitka = "^0.6.19"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
