[tool.poetry]
name = "configer"
version = "0.1.0"
description = "Создание файлов конфигураци"
authors = ["Denis kustov <denis-kustov@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.3"
mg-file = "0.1.10.3"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
Nuitka = "^0.6.19"
Sphinx = "^4.4.0"
sphinx-autobuild = "^2021.3.14"
sphinx-rtd-theme = "^1.0.0"
m2r2 = "^0.3.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
